# gabbihtml

./: .stestr.conf  .testr.conf  .travis.yml  Makefile  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
docs/: Makefile
docs/source/: conf.py  index.rst
gabbihtml/: handler.py
gabbihtml/tests/: test_gabbits.py
gabbihtml/tests/gabbits/: html-handler.yaml
