[metadata]
name = gabbihtml
author = Chris Dent
author-email = cdent@anticdent.org
summary = HTML Content Handler for Gabbi
description-file = README.rst
license = Apache-2
home-page = https://github.com/cdent/gabbihtml
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Testing

[files]
packages =
    gabbihtml

